--- a/css/style.css
+++ b/css/style.css
@@ -2,29 +2,31 @@
     box-sizing: border-box; /* padding läggs till och pressar innehållet inåt */
 }
 
+body {
+    background-color: #E3E8E8; 
+}
+
 #container {
     width: 960px;
     margin: 20px auto; 
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-#header,
 #main-content,
 #footer {
     padding: 20px;
 }
 
 #header {
-    background-color: skyblue;
+    background-color: #2D3134; 
+    padding: 10px; 
 }
 
-#site-header {
-    color: darkslategrey;
-    padding: 0;
-    margin: 0; 
+#header img {
+    width: 250px; 
 }
 
 #main-nav {
-    background-color:rgb(97, 97, 193);
+    background-color: #B7BCBA;
 }
 
 #main-nav ul {
@@ -51,13 +53,18 @@
 
 #main-content {
     margin-top: 10px; 
-    background-color: beige;
-    height: 300px;
+    background-color: white;
+    height: 460px;
     width: 960px; 
 }
 
+#main-content img {
+    height: 300px;
+    margin: 20px auto; 
+}
+
 #footer {
-    background-color: gray;
+    background-color: #3D4244;
     height: 100px;
     margin-top: 10px;
     color: white;
