--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,15 @@ body {
     background-color: #E3E8E8; 
 }
 
+h1 {
+    color: white; 
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+}
+
 #container {
     width: 960px;
     margin: 20px auto; 
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
 }
 #main-content,
 #footer {
