--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 
 #container {
-    width: 960px;
+    width: 100%;
     margin: 20px auto; 
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
