--- a/css/style.css
+++ b/css/style.css
@@ -17,14 +17,10 @@ h1 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
 }
 
-#main-nav {
-    background-color: #B7BCBA;
-}
-
 #main-nav ul {
     list-style-type: none;
     padding: 0;
-    margin: 0;
+    margin-bottom: 10px;
     float: left; 
 }
 
@@ -35,7 +31,7 @@ h1 {
 }
 
 #main-nav ul li a:hover {
-    background-color: rgb(97, 97, 193);
+    background-color:#DAD0EE;
     color: white;
 }
 
@@ -81,7 +77,7 @@ h1 {
 /*----------EXTRA----------*/ 
 
 .active {
-    background-color: rgb(233, 158, 229);
+    background-color: rgb(97, 97, 193);
     color: white;
 }
 
