--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ h1 {
 }
 
 #container {
-    width: 100%;
+    width: 960px;
     margin: 20px auto; 
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
 }
